# ubench

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/modules/: AddEigen.cmake  AddGoogleBenchmark.cmake  AddOnnxRuntime.cmake  AddPerfect.cmake  AddPwropt.cmake  AddRuy.cmake  AddXNNPACK.cmake  AddXSimd.cmake  AddXTL.cmake  AddXTensor.cmake
results/: output.json  output_22.json
src/: CMakeLists.txt  main.cpp
src/gemm/: CMakeLists.txt  args.h  cblas.cpp  clblas.cpp  eigen.cpp  mlas.cpp  ruy.cpp
src/memcpy/: CMakeLists.txt  memcpy.cpp
src/utils/: CMakeLists.txt  benchmark.cpp  benchmark.h
src/vector-add/: CMakeLists.txt  args.h  clang_simd.cpp  eigen.cpp  naive.cpp  naive_aligned.cpp  omp_simd.cpp  psimd.cpp  tiling.cpp  xnnpack.cpp  xsimd.cpp
system_setup/: scaling_governor.sh  setup.sh
utils/: process_results.py
